@@ -1,3 +1,8 @@
+2005-12-31  Per Bothner  <per@bothner.com>
+
+	* PreProcess.java: Fix various problems in handling nested
+	conditionals.
+
 2005-12-30  Per Bothner  <per@bothner.com>
 
 	* PreProcess.java (filter): Implement nested conditionals.
